--- a/src/css/page/home/banner.scss
+++ b/src/css/page/home/banner.scss
@@ -60,8 +60,6 @@
             position: relative;
             animation: fade;
             animation-duration: 1s;
-            img{
-            }
             &::after{
                 content: '';
                 position: absolute;
